<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_primary80"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MyTemperatures">

    <Button
        android:id="@+id/home_button"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/home"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/temperatureInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="25dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/input_temperature"
        android:inputType="numberSigned|numberDecimal"
        android:labelFor="@id/temperature_converter"
        android:minHeight="48dp"
        android:textSize="20sp" />

    <Spinner
        android:id="@+id/input_temperature_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/temperature_converter"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:text="@string/convert" />

    <LinearLayout
        android:id="@+id/temperature_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical" />

</androidx.appcompat.widget.LinearLayoutCompat>